--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.18.6",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "node-sass": "^8.0.0",
+        "postcss": "^8.1.14",
+        "sass-loader": "^13.2.2"
+    },
+    "dependencies": {
+        "@shopify/app-bridge": "^3.7.5",
+        "@shopify/app-bridge-react": "^3.7.5",
+        "@shopify/app-bridge-utils": "^3.5.1",
+        "@shopify/polaris": "^10.43.0",
+        "antd": "^5.4.0",
+        "react-router-dom": "^6.10.0",
+        "sass": "^1.61.0"
     }
 }
