--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
         "@shopify/app-bridge": "^3.7.5",
         "@shopify/app-bridge-react": "^3.7.5",
         "@shopify/app-bridge-utils": "^3.5.1",
-        "@shopify/polaris": "^10.43.0",
+        "@shopify/polaris": "^10.45.0",
         "antd": "^5.4.0",
         "react-router-dom": "^6.10.0",
-        "sass": "^1.61.0"
+        "sass": "^1.61.0",
+        "sweetalert2": "^11.7.3"
     }
 }
