--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@shopify/polaris": "^10.45.0",
         "antd": "^5.4.0",
         "react-router-dom": "^6.10.0",
+        "react-switch": "^7.0.0",
         "sass": "^1.61.0",
         "sweetalert2": "^11.7.3"
     }
