--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@shopify/app-bridge-utils": "^3.5.1",
         "@shopify/polaris": "^10.45.0",
         "antd": "^5.4.0",
+        "react-color": "^2.19.3",
         "react-router-dom": "^6.10.0",
         "sass": "^1.61.0",
         "sweetalert2": "^11.7.3"
